# mark

./: .env.example  AGENTS.md  Cargo.toml  Dockerfile  PROJECT.md  README.md  build.rs  sylphx.toml
.github/workflows/: ci.yml
docs/adr/: ADR-0001-capability-first-architecture.md  README.md
src/: badge.rs  bootstrap.rs  brand.rs  color.rs  github.rs  icons.rs  lib.rs  main.rs  routes.rs  stats.rs  svg.rs  themes.rs
src/banner/: mod.rs  motion.rs  shapes.rs
src/capabilities/: mod.rs
src/capabilities/badge/: mod.rs
src/capabilities/badge/application/: mod.rs  render.rs
src/capabilities/badge/domain/: mod.rs  model.rs
src/capabilities/badge/interfaces/: http.rs  mod.rs
src/capabilities/banner/: mod.rs
src/capabilities/banner/application/: mod.rs  render.rs
src/capabilities/banner/domain/: input.rs  mod.rs  shapes.rs
src/capabilities/banner/interfaces/: http.rs  mod.rs
src/capabilities/brand_kit/: mod.rs
src/capabilities/brand_kit/application/: mod.rs  render.rs
src/capabilities/brand_kit/interfaces/: http.rs  mod.rs
src/capabilities/deploy_mark/: mod.rs
src/capabilities/deploy_mark/application/: mod.rs  render.rs
src/capabilities/deploy_mark/interfaces/: http.rs  mod.rs
src/capabilities/github_card/: mod.rs
src/capabilities/icon_row/: mod.rs
src/interfaces/: mod.rs
src/interfaces/http/: catalog.rs  health.rs  mod.rs  response.rs  studio.rs
src/shared/: color.rs  mod.rs  svg.rs  theme.rs
static/: index.html
tests/: architecture_boundaries.rs  banner_motion.rs  http_contracts.rs  render_smoke.rs  stats_live.rs
(+17 files in other folders)
