[package]
name = "mark"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Sylphx Mark — embeddable image API (URL → SVG)"
authors = ["SylphxAI"]
repository = "https://github.com/SylphxAI/mark"
publish = false

[[bin]]
name = "mark"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
once_cell = "1"
moka = { version = "0.12", features = ["future"] }
urlencoding = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
